--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,5 @@
 {
-    "extends": "airbnb"
+    "extends": ["airbnb", "airbnb/hooks", "prettier"],
+    "plugins": ["prettier"],
+    "rules": {"prettier/prettier":"error"}
 }
